# md2doc

./: .gitignore  README.md  README_zh.md  hr-to-pagebreak.lua  pyproject.toml  start.bat  start_hidden.vbs
scripts/: build_exe.ps1  pyinstaller_entry.py  release.ps1
src/md2doc/: __init__.py  _process.py  app.py  build_info.py  cli.py  converter.py  dependencies.py  project.py
tests/: test_app_state.py  test_cli.py  test_converter.py  test_dependencies.py  test_project.py
