[project]
name = "md2doc"
version = "0.1.0"
description = "Local Markdown document converter powered by Pandoc and mermaid-filter."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
md2doc = "md2doc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2doc"]
