[project]
name = "md2doc"
version = "0.1.6"
description = "Local converter: Markdown to documents (Pandoc) and Word/PPT/Excel to Markdown (MarkItDown)."
requires-python = ">=3.11"
dependencies = [
    "markitdown[docx,pptx,xlsx]>=0.0.1a2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
md2doc = "md2doc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2doc"]
